src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Proc_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Collect Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Reconcile__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Uncheck for Manual Reconciliation</description>
        <inlineHelpText>Uncheck for Manual Reconciliation</inlineHelpText>
        <label>Auto Reconcile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Send_Fiscal_Documents__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Send all created invoices and credit notes automatically to customers</inlineHelpText>
        <label>Auto Send Fiscal Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Debtor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Debtor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Detractors__c</fullName>
        <label>Delighted Detractors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelightedInc__NPS__c</fullName>
        <label>Delighted NPS</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Passives__c</fullName>
        <label>Delighted Passives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DelightedInc__Promoters__c</fullName>
        <label>Delighted Promoters</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Security_Pin_Reminder__c</fullName>
        <label>Security Pin Reminder</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Security_Pin__c</fullName>
        <label>Security Pin</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>